2 player bug spawning 2x zombies, cancel villager trade screen and the murder of pandas